# niffler-py-st3

./: .gitignore  index.html  pyproject.toml
.github/workflows/: ci-allure.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 436267723f61fe7b.json  582058e9c2d82886.txt  5bcaf209eb85d80.txt  83391cfebd5549b2.txt  850ef1c8e6901053.txt  966e015385054139.txt  9762cc4e8b107f1b.txt  9d0ab43519b71e70.txt  9faedf158b666b16.txt  a1edbd41aab0a681.txt  a2bd1fee43adf24b.txt  b9fcf9d5631c0828.txt  baa709a5de0248b3.txt  cc4b9cd1eac64438.txt  ee18734b5c853be7.txt  f59a6f7304cc1d22.txt
data/test-cases/: 145b27e90cf96f48.json  161a78e9d7af086f.json  16959528316b8333.json  192e82eb1cd54cd4.json  20deb3a44a747edc.json  31b1a885165b122f.json  3a83b2b3c2904ecb.json  405b954bbf1df853.json  4474915e47c41442.json  46312b41b1516d73.json  4a25d5203083912f.json  4c4894c0425595de.json  585cee685a058b3c.json  5991956b4c7b8a4b.json  660a3dd7b1f44680.json  660cbeedd0eb255f.json  71c6e335321c9105.json  73f6825a91a0055e.json  755d544125149134.json  77305123a12ab442.json  78f549b088701612.json  7ba04680c4d1a46.json  8521d32b1f9dd118.json  8ad2426b764d31c2.json  8cc803f13650c69d.json  8ef10333c9d09b7b.json  8fdd2c72d7341c75.json  957f0aedb8556a06.json  988bc7e939a6ba70.json  9bf17398601a11e0.json  (+14 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
niffler_e_2_e_tests_python/: .env  .env.sample  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini  run_allure.sh
niffler_e_2_e_tests_python/assets/: data_attachments_809db929d1b2f0cb.webm
niffler_e_2_e_tests_python/data/: data_test.py
niffler_e_2_e_tests_python/databases/: friendship_db.py  spend_db.py  used_db.py
niffler_e_2_e_tests_python/fixtures/: auth_fixtures.py  client_fixtures.py  pages_fixtures.py  soap_fixtures.py  util_test_fixtures.py
niffler_e_2_e_tests_python/grpc_tests/: docker-compose.mock.yml
niffler_e_2_e_tests_python/grpc_tests/internal/grpc/interceptors/: allure.py  logging.py
niffler_e_2_e_tests_python/grpc_tests/internal/pb/: niffler_currency_pb2.py  niffler_currency_pb2.pyi  niffler_currency_pb2_pbreflect.py
niffler_e_2_e_tests_python/grpc_tests/tests/: test_calculate_rate.py  test_get_all_currencies.py
niffler_e_2_e_tests_python/models/: category.py  config.py  spend.py  user.py
niffler_e_2_e_tests_python/navigation/: navbar.py
niffler_e_2_e_tests_python/page_factory/: base_component.py  block.py  button.py  checkbox.py  image.py  input.py  link.py  list_item.py  radiobutton.py  table.py  text.py  title.py
niffler_e_2_e_tests_python/pages/: base_page.py  login_page.py  main_page.py  new_spending_page.py  profile_page.py
niffler_e_2_e_tests_python/schemas/templates/: http-colored-request.ftl  http-colored-response.ftl
niffler_e_2_e_tests_python/tests/: test_api.py  test_categories.py  test_kafka.py  test_login.py  test_register.py  test_soap_userdata.py  test_spending.py
niffler_e_2_e_tests_python/utils/: allure_helpers.py  api_clients.py  auth_client.py  base_session.py  kafka_client.py  soap_client.py  userdata_soap_client.py  utils.py  waiters.py
widgets/: behaviors.json  duration.json  history-trend.json  severity.json  suites.json  summary.json
